# blazemail

./: Cargo.toml  README.md
data/: client_secret.json
src/: activites.rs  mail.rs  main.rs
src/mail/: open_browser_delegate.rs
