[package]
name = "blazemail-desktop"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus.git", features = [
    "transparent",
] }
fermi = { git = "https://github.com/dioxuslabs/dioxus.git" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus.git" }

google-gmail1 = "4.0.1"
hyper = { version = "0.14.23", features = ["full"] }
hyper-rustls = "0.23.1"
lettre = { version = "0.10.1", features = [
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }
oauth2 = "4.3.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
webbrowser = "0.8.2"
log = "0.4.17"
html-escape = "0.2.12"
